@@ -1,3 +1,7 @@
+[B]Version 2.1.3 - 2011-03-16[/B]
+- Updated DR's streaming urls
+- Removed 24Nordjyske (they switched to Silverlight Smooth Streaming)
+
 [B]Version 2.1.2 - 2011-02-05[/B]
 - Avoid problem with missing settings
 - Fixed use of secondary streams from external addons (fx TV Guide)
